# AI-ML-Engineer_Tushar_April2026

./: .env.example  README.md  pyproject.toml  requirements.txt
artifacts/: bug_triage_result.yaml  launch_decision.json
artifacts/traces/: assessment1_trace.jsonl  assessment2_trace.jsonl
assessment1_launch_war_room/: __init__.py  __main__.py  orchestrator.py  run.py  schemas.py  tools.py
assessment1_launch_war_room/data/: feedback.txt  metrics.csv  release_notes.md
assessment2_bug_triage/: __init__.py  __main__.py  orchestrator.py  run.py  schemas.py  tools.py
assessment2_bug_triage/artifacts/repro/: test_repro_checkout.py
assessment2_bug_triage/fixtures/: bug_report.md
assessment2_bug_triage/mini_repo/checkoutcalc/: __init__.py
assessment2_bug_triage/mini_repo/tests/: conftest.py  test_pricing.py
shared/: __init__.py  llm.py  trace_logger.py
